dont show sample map categories with no maps

--- a/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
+++ b/lib/assets/javascripts/cartodb/dashboard/views/side_menu.jst.ejs
@@ -47,10 +47,14 @@
           <div class="CategoryCount"><%- counts.sample_types.liked %></div>
         <% } %>
       </div></li>
+      <% if (countsReady) { %>
       <% for (var i = 0, l = categories.length; i < l; ++i) { %>
         <%
           var category = categories[i];
           var categoryId = category.get('id');
+          if (counts.categories[categoryId] == 0) {
+            continue;
+          }
           var subCategories = category.get('children');
           var selected = "";
           var expanded = "";
@@ -66,26 +70,28 @@
           <div class="MenuItem <%- selected %> <%- expanded %>" data-category="<%- categoryId %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%= categoryId %>}'>
             <div class="<%- parentClass %>"></div>
             <a href="javascript:void(0)"><%- category.get('name') %></a>
-            <% if (countsReady) { %>
-              <div class="CategoryCount"><%- counts.categories[categoryId] %></div>
-            <% } %>
+            <div class="CategoryCount"><%- counts.categories[categoryId] %></div>
           </div>
           <% if (subCategories.length > 0) { %>
             <ul class="SubCategories <%- expanded %> SubCategories-<%- categoryId %>">
             <% for (var s = 0, sl = subCategories.length; s < sl; ++s) { %>
-              <% var subCategory = subCategories[s]; %>
+              <%
+                var subCategory = subCategories[s];
+                if (counts.categories[subCategory.id] == 0) {
+                  continue;
+                }
+              %>
               <li class="SubCategory">
                 <div class="MenuItem <%- (subCategory.id == current_category ? "selected" : "") %>" data-params='{"samples": true, "shared": "no", "category": true, "page": <%- subCategory.id %>}'>
                   <a href="javascript:void(0)"><%- subCategory.name %></a>
-                  <% if (countsReady) { %>
-                    <div class="CategoryCount"><%- counts.categories[subCategory.id] %></div>
-                  <% } %>
-                  </div>
+                  <div class="CategoryCount"><%- counts.categories[subCategory.id] %></div>
+                </div>
               </li>
             <% } %>
             </ul>
           <% } %>
         </li>
+      <% } %>
       <% } %>
     </ul>
   <% } %>
