--- a/app/assets/stylesheets/map/overlays.css.scss
+++ b/app/assets/stylesheets/map/overlays.css.scss
@@ -140,6 +140,7 @@
 
   .content > .text {
     font-family: 'Helvetica Neue', Helvetica, sans-serif; font-weight: 400;
+    font-weight: 400;
     strong { font-weight: 700; }
   }
 
