--- a/app/assets/stylesheets/old_elements/dialog_small_edit.css.scss
+++ b/app/assets/stylesheets/old_elements/dialog_small_edit.css.scss
@@ -328,7 +328,7 @@
         background:#4086C3;
         border:1px solid #2B5B85;
         @include border-radius(2px);
-        font:normal 11px "Arial";
+        font:normal 11px;
         color:#FFFFFF;
 
         span.tagit-label {
