--- a/app/assets/stylesheets/plugins/tipsy.css.scss
+++ b/app/assets/stylesheets/plugins/tipsy.css.scss
@@ -3,7 +3,7 @@
    * Styles for tipsy tooltip
    */
 
-.tipsy { font-size: 11px; position: absolute; padding: 5px; z-index: 100000; font-family:Arial;}
+.tipsy { font-size: 11px; position: absolute; padding: 5px; z-index: 100000;}
   .tipsy-inner { background-color: #000; color: #FFF; max-width: 400px; padding: 5px 8px 7px 8px; text-align: center; }
 
   /* Rounded corners */
