MapCard-Footer visual fixes
- Raises the clock by two pixels
- Increases size of star to 15px (from 13px)
- Aligns star vertically to elements on the left.

Test plan:
- Grunt css
- Check alignment and size of MapCard Footer elements.

--- a/app/assets/stylesheets/common/likes-indicator.css.scss
+++ b/app/assets/stylesheets/common/likes-indicator.css.scss
@@ -16,8 +16,10 @@ $cLiked: #D93F56;
   vertical-align: top; 
 }
 .LikesIndicator-icon {
-  width: 13px;
-  height: 13px;
+  position: relative;
+  top: 2px;
+  width: 15px;
+  height: 15px;
   background-image: url('../images/favorite_disabled.svg');
   background-repeat: no-repeat;
 }
