--- a/lib/assets/javascripts/cartodb/table/header/views/options_menu.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/header/views/options_menu.jst.ejs
@@ -1,5 +1,5 @@
 <% var bbgProUI = $.inArray("bbg_pro_ui", user_data.feature_flags) !== -1; %>
-<% var viewDatasetsEnabled = $.inArray("bbg_view_datasets", user_data.feature_flags) !== -1; %>
+<% var viewDatasetsEnabled = $.inArray("datasets_as_views", user_data.feature_flags) !== -1; %>
 <ul>
   <% if (!isVisualization) { %>
     <li class="<% if (table.isInSQLView() && dataLayer && !dataLayer.get('query')) { %>disabled<% } %>"><a class="small export_table" href="#/export">Export...</a></li>
