Export images with normal line-height fixed descriptions

--- a/app/assets/stylesheets/table/export_image_view.css.scss
+++ b/app/assets/stylesheets/table/export_image_view.css.scss
@@ -157,7 +157,7 @@
 .ExportHelperDescription {
   color: #FFF;
   font-size: 13px;
-  line-height: 19px;
+  line-height: normal;
   width: 100%;
 }
 
