Render header overlays as html in export image view

--- a/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/views/export_image_view.jst.ejs
@@ -6,7 +6,7 @@
   <% if (show_title || show_description) { %>
   <div class="ExportHelper ExportHelper--header">
     <% if (show_title) { %>
-    <div class="ExportHelperTitle js-title"><%- title %></div>
+    <div class="ExportHelperTitle js-title"><%= cdb.core.sanitize.html(title) %></div>
     <% } %>
     <% if (show_description) { %>
     <div class="ExportHelperDescription js-description"><%= cdb.core.sanitize.html(description) %></div>
