--- a/lib/assets/javascripts/cartodb/public_common/sample_settings_template.jst.ejs
+++ b/lib/assets/javascripts/cartodb/public_common/sample_settings_template.jst.ejs
@@ -4,6 +4,9 @@
             <a href="#/save-map" class="Button add_new_layer js-save-map">Save a Copy</a>
         </li>
         <li>
+            <a href="#/save-map" class="Button add_new_layer js-copy-link">Copy Link</a>
+        </li>
+        <li>
             <a href="<%- dashboard_url %>/maps/samples" class="Button add_new_layer">Back to Library</a>
         </li>
     </ul>
