Tweak sample link format (add curly brackets and remove clickable link

--- a/lib/assets/javascripts/cartodb/common/views/samples_copy_link.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/views/samples_copy_link.jst.ejs
@@ -2,7 +2,7 @@
    <div class="Dialog-header">
     <p class="Dialog-headerTitle">
       <div style="user-select:text;font-size:16px">
-        Link: <a class="js-bbg-sample-link" href="<%= link %>"><%= bbg_link %>&lt;GO&gt;</a>
+        Link: <span class="js-bbg-sample-link">{<%= bbg_link %> &lt;GO&gt;}</span>
       </div>
     </p>
   </div>
