--- a/lib/assets/javascripts/cartodb/common/dialogs/static_image/export_image_result_view.jst.ejs
+++ b/lib/assets/javascripts/cartodb/common/dialogs/static_image/export_image_result_view.jst.ejs
@@ -1,11 +1,12 @@
-<div class="u-inner" style="display: none;">
+<% var autoImageExportDisabled = $.inArray("auto_image_export_disabled", user_data.feature_flags) !== -1; %>
+<div class="u-inner" style="<%- autoImageExportDisabled ? '' : 'display: none;' %>" >
   <div class="Dialog-header">
     <div class="Dialog-headerIcon Dialog-headerIcon--neutral">
       <i class="CDB-IconFont CDB-IconFont-ray"></i>
     </div>
-    <p class="Dialog-headerTitle">Your image has been generated correctly</p>
+    <p class="Dialog-headerTitle">Click to download image.</p>
     <% if (response.type === 'url') {%>
-    <p class="Dialog-headerText">It's now available in: <a href="<%- response.content %>"
+    <p class="Dialog-headerText"><a href="<%- response.content %>"
         id="download_link"
         target="_blank" class="ExportImageResult--url" download="<%- response.filename %>"><%- response.displayedLink %></a></p>
     <% } else { %>
@@ -31,7 +32,7 @@
     <% } %>
   </div>
   <div class="Dialog-footer Dialog-footer--simple">
-
+  <!--
     <% if (response.type === 'url') {%>
     <a href="<%- response.content %>" target="_blank" class="Button Button--secondary js-open-image">
       <span>view image</span>
@@ -41,5 +42,6 @@
       <span>close</span>
     </button>
     <% } %>
+  -->
   </div>
 </div>
