--- a/lib/assets/javascripts/cartodb/table/menu_modules/filters/templates/histogram.jst.ejs
+++ b/lib/assets/javascripts/cartodb/table/menu_modules/filters/templates/histogram.jst.ejs
@@ -1,7 +1,10 @@
+<div class="ui-datepicker-div"></div>
 <a href="#remove" class="remove"></a>
 
 <div class="header">
   <div class="title">
+    <a class="toggleButton" style="float:left; margin-right:3px" href="#">(toggle)</a>
+    <p class='range-text'></p>
     <strong class="legend">
       <%if (alias) { %>  
         <%- alias %>:
@@ -9,16 +12,29 @@
         <%- legend %>:
       <% } %>
     </strong>
-    <div class="loading">Loading</div>
     <div class="empty">This column is empty</div>
-    <div class="only">This column has one unique value</div>
 
     <div class="range-number">
         <input type="number" class="min" /> - <input type="number" class="max" />
         <br />
         <!--span class="subtext">Hit 'Enter' to save...</span-->
+      <div class="form-view form_spinner opacity">
+        <input type="value" class="min" style="width:75px!important"/>
+        <a href='#' class='min-plus plus'></a>
+        <a href='#' class='min-minus minus'></a>
+      </div>
+       -
+      <div class="form-view form_spinner opacity">
+        <input type="value" class="max" style="width:75px!important"/>
+        <a href='#' class='max-plus plus'></a>
+        <a href='#' class='max-minus minus'></a>
+      </div>
     </div>
-    <div class="range"></div>
+    <br />
+    <div class="range-date-text"></div>
+    <div class="range">
+      <input type="text" class="date-min" /> - <input type="text" class="date-max" /><button class="ui-open-calendar">cal</button><a href="#" class="ui-close-calendar">Close</a>
+    </div>
   </div>
 </div>
 
